name:                lens-zip-archive
version:             0.1.0.0
synopsis:            Lenses for the zip-archive package.
description:         Please see README.md
homepage:            https://github.com/nkpart/lens-zip-archive
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2016 Nick Partridge
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codec.Archive.Zip.Lens
  build-depends:       base >= 4.7 && < 5
                     , lens >= 4.13 && < 5
                     , zip-archive
                     , bytestring >= 0.10
  default-language:    Haskell2010

test-suite lens-zip-archive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lens-zip-archive
                     , zip-archive
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/lens-zip-archive
